--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = "0.23.1"
-schannel = "0.1.27"
-windows-sys = "0.59.0"
+windows-sys = {version = "0.59.0", features = ["Win32_Security_Cryptography"] }
