--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ crate-type = ["cdylib"]
 [dependencies]
 chrono = "0.4.40"
 pyo3 = "0.24.1"
-windows-sys = {version = "0.59.0", features = ["Win32_Security_Cryptography"] }
+windows-sys = {version = "0.59.0", features = ["Win32_Security_Cryptography", "Win32_System_Time"] }
