Finalized all the requirements for beta 0.2.0
Expanded the base python init file
Added handle for CSP keys
Expanded the python test file
Updated the pyproject toml and Cargo toml files to reflect new changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ build-backend = "maturin"
 name = "py_cert_store"
 readme = "README.md"
 requires-python = ">=3.8"
+dependancies = [
+    "cryptography"
+]
 classifiers = [
+    "Development Status :: 4 - Beta",
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
@@ -20,3 +24,6 @@ features = ["pyo3/extension-module"]
 [project.urls]
 Homepage = "https://github.com/unwarymold9171/Py_Cert_Store"
 Issues = "https://github.com/unwarymold9171/Py_Cert_Store/issues"
+
+[project.optional-dependencies]
+tests = ["pythonnet"]
