--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -153,12 +153,20 @@ jobs:
   #         name: wheels-sdist
   #         path: dist
 
+  security_audit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: rustsec/audit-check@v2.0.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
   release:
     name: Release
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
     # needs: [linux, musllinux, windows, macos, sdist]
-    needs: [windows,]
+    needs: [windows, security_audit]
     permissions:
       # Use to sign the release artifacts
       id-token: write
