--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "py_cert_store"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "cryptography"
+    "cryptography>=44.0.1"
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
