--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -153,7 +153,7 @@ jobs:
   #         name: wheels-sdist
   #         path: dist
 
-  security_audit:
+  rust_security_audit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -161,12 +161,19 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+  pip-audit:
+    needs: [rust_security_audit]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: pypa/gh-action-pip-audit@v1.0.0
+
+
   release:
     name: Release
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
     # needs: [linux, musllinux, windows, macos, sdist]
-    needs: [windows, security_audit]
+    needs: [windows, pip-audit]
     permissions:
       # Use to sign the release artifacts
       id-token: write
