--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -161,19 +161,28 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  pip-audit:
-    needs: [rust_security_audit]
-    runs-on: ubuntu-latest
+  pip_windows_audit:
+    needs: [windows, rust_security_audit]
+    runs-on: ${{ matrix.platform.runner }}
+    strategy:
+      matrix:
+        platform:
+          - runner: windows-latest
+            target: x64
+          - runner: windows-latest
+            target: x86
     steps:
-      - uses: pypa/gh-action-pip-audit@v1.0.0
-
+      - uses: actions/checkout@v4
+      - name: install
+        run: python -m pip install .
+      - uses: pypa/gh-action-pip-audit@v1.1.0
 
   release:
     name: Release
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
     # needs: [linux, musllinux, windows, macos, sdist]
-    needs: [windows, pip-audit]
+    needs: [pip_windows_audit]
     permissions:
       # Use to sign the release artifacts
       id-token: write
